[package]
name = "neptune"
version = "0.1.0"
edition = "2021"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[profile.bench]
panic = "abort"
lto = true

[profile.test]
panic = "abort"

[profile.doc]
panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[build]
target = "aarch64-unknown-none"

[target.aarch64-unknown-none]
linker = "aarch64-none-elf-ld"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
